refactor(FileService) : FileService 개선 및 코드 디렉터리 설정 변경
- @Value 어노테이션을 사용하여 외부 설정으로 주입
- Java 파일 생성 시 클래스 이름을 기반으로 파일 이름을 생성
- Java 코드로부터 클래스 이름을 추출하는 extractClassName 메서드 추가
- Files.writeString()를 사용하여 간결화